# example_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
data/tests/: test_table.tex.frozen
data/tests/table/: test_table.txt
docs/: code_api.rst  conf.py  index.rst  notebooks.rst
notebooks/: example_notebook.ipynb  example_notebook_one.ipynb  example_notebook_two.ipynb
src/: another.py  example.py
src/example_project/: greeting.py  sum_two.py  table.py
src/python/: example.py  sum_two.py
tests/: test_another.py  test_example.py  test_greeting.py  test_sum_two.py  test_table.py
