[project]
name = "example-project"
readme = "README.md"
authors = [
    { name = "aetv", email = "akke.viitanen@iki.fi" }
]
dependencies = [
    "ipykernel",
    "sphinx",
    "nbsphinx",
    "sphinx_rtd_theme",
    "numpy",
    "pandoc",
]
version = "0.0.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_project"]
