[project]
name = "example-project"
readme = "README.md"
authors = [
    { name = "aetv", email = "akke.viitanen@iki.fi" }
]
dependencies = [
    "build",
    "ipykernel",
    "nbsphinx",
    "matplotlib",
    "numpy",
    "scipy",
    "sphinx",
    "sphinx_rtd_theme",
    "pandoc",
    "pytest",
]
version = "0.1.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_project"]
