[project]
name = "example-project"
readme = "README.md"
authors = [
    { name = "aetv", email = "akke.viitanen@iki.fi" }
]
dependencies = [
    "astropy",
    "build",
    "coverage",
    "ipykernel",
    "nbsphinx",
    "matplotlib",
    "numpy",
    "scipy",
    "sphinx",
    "sphinx_rtd_theme",
    "pandoc",
    "pytest",
    "pytest-cov",
]
version = "0.1.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_project"]

[tool.coverage.run]
source = ["src"]
omit = ["tests"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
